--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "token": "", 
+  "token": "MTIxODQ5ODcwMjIzNTQwMjI0MQ.GU5jvl.7fRpiFFTq7DSpNU9XVfCXJ3IibmaofBPqW0zr0", 
   "prefix": "^",
   "everyoneMention": false,
   "hostedBy": true
